--- a/app/www/package.json
+++ b/app/www/package.json
@@ -18,7 +18,9 @@
     "@types/react-dom": "^16.0.6",
     "@types/react-dropzone": "^4.2.2",
     "@types/react-router-dom": "^4.3.1",
+    "moment": "^2.24.0",
     "react": "^16.4.1",
+    "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1"
   },
