--- a/app/www/package.json
+++ b/app/www/package.json
@@ -22,7 +22,8 @@
     "react": "^16.4.1",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "recharts": "^1.5.0"
   },
   "devDependencies": {
     "css-loader": "^1.0.0",
