--- a/app/www/package.json
+++ b/app/www/package.json
@@ -19,10 +19,12 @@
     "@types/react-dropzone": "^4.2.2",
     "@types/react-router-dom": "^4.3.1",
     "moment": "^2.24.0",
+    "rc-slider": "^8.6.9",
     "react": "^16.4.1",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
+    "react-select": "^2.4.2",
     "recharts": "^1.5.0"
   },
   "devDependencies": {
